[package]
name = "ream-yew"
version = "0.1.0"
authors = ["Chih-Ming Louis Lee <louis@chihminglee.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
yew = { version = "0.17", package = "yew-stdweb" }
wasm-bindgen = "0.2.67"
ream = { path = "../core" }
